--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -2,8 +2,8 @@
 <form name="f"  novalidate>
 
 
-    <input ui-dir name="a" type="text" ng-model="mod" required/>
+    <input ui-dir name="a" type="text" ng-model="mod" />
     <label>{{mod}}</label>
-    <button type="submit" ng-disabled="f.$error.float">ok</button>
+    <button type="submit" ng-disabled="f.$error.validCharacters">ok</button>
 
 </form>
