--- a/app/index.html
+++ b/app/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
-
 <head>
-  <meta charset="utf-8">
-
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
-<body ng-app="myApp">
-  <ul class="menu">
-    <li><a ui-sref="view1">view1</a></li>
-    <li><a ui-sref="view2">view2</a></li>
-  </ul>
 
+<body ng-app="app">
 
-  <div ui-view></div>
+<div ui-view></div>
 
+<script src="../bower_components/jquery/dist/jquery.min.js"></script>
+<script src="../bower_components/angular/angular.js"></script>
+<script src="../bower_components/angular-ui/build/angular-ui.js"></script>
+<script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-ui/build/angular-ui.js"></script>
-  <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="app.js"></script>
-  <!--<script src="view1/view1.js"></script>-->
-  <!--<script src="view2/view2.js"></script>-->
+<script src="app.js"></script>
+<!--<script src="view1/view1.js"></script>-->
+<!--<script src="view2/view2.js"></script>-->
 </body>
 </html>
