--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+<html lang="en" >
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
 <body ng-app="app">
-
+index
 <div ui-view></div>
 
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
@@ -13,7 +14,9 @@
 <script src="../bower_components/angular-ui/build/angular-ui.js"></script>
 <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
-<script src="app.js"></script>
+
+<script src="scripts/config/states.js"></script>
+<script src="scripts/controllers/mainCtrl.js"></script>
 <!--<script src="view1/view1.js"></script>-->
 <!--<script src="view2/view2.js"></script>-->
 </body>
