--- a/index.html
+++ b/index.html
@@ -4,28 +4,54 @@
     <meta charset="utf-8">
     <!-- inject:css -->
     <link rel="stylesheet" href="./app/styles/app.css">
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css">
     <!-- endinject -->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
-<body ng-app="app">
+<body ng-app="app" ng-cloak>
 
 <div ui-view></div>
+
+
+<script type="text/ng-template" id="myModalContent.html">
+    <div class="modal-header">
+        <h3 class="modal-title">I'm a modal!</h3>
+    </div>
+    <div class="modal-body">
+        <ul>
+            <li ng-repeat="item in items">
+                <a href="#" ng-click="$event.preventDefault(); selected.item = item">{{ item }}</a>
+            </li>
+        </ul>
+        Selected: <b>{{ selected.item }}</b>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="$close()">OK</button>
+        <button class="btn btn-warning" type="button" ng-click="$dismiss()">Cancel</button>
+    </div>
+</script>
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-ui/build/angular-ui.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="bower_components/angular-animate/angular-animate.min.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="bower_components/ui-bootstrap-custom-build/ui-bootstrap-custom-1.2.5.js"></script>
+<script src="bower_components/ui-bootstrap-custom-build/ui-bootstrap-custom-tpls-1.2.5.js"></script>
+
+
+
 
 <!-- inject:js -->
-<script src="./app/scripts/config/run.js"></script>
 <script src="./app/scripts/config/states.js"></script>
+<script src="./app/scripts/controllers/mainController.js"></script>
+<script src="./app/scripts/directives/productsFormDirective.js"></script>
 <script src="./app/scripts/directives/choiceDataDirective.js"></script>
 <script src="./app/scripts/directives/layoutDirective.js"></script>
-<script src="./app/scripts/directives/productsFormDirective.js"></script>
+<script src="./app/scripts/services/modalTool.js"></script>
+<script src="./app/scripts/config/run.js"></script>
 <script src="./app/scripts/services/dataService.js"></script>
-<script src="./app/scripts/controllers/mainController.js"></script>
 <!-- endinject -->
 
 
