--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="bower_components/angular-animate/angular-animate.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="bower_components/ui-bootstrap-custom-build/ui-bootstrap-custom-1.2.5.js"></script>
-<script src="bower_components/ui-bootstrap-custom-build/ui-bootstrap-custom-tpls-1.2.5.js"></script>
+<!--<script src="bower_components/ui-bootstrap-custom-build/ui-bootstrap-custom-1.2.5.js"></script>
+<script src="bower_components/ui-bootstrap-custom-build/ui-bootstrap-custom-tpls-1.2.5.js"></script>-->
+<script src="bower_components/ui-bootstrap-custom-build_date/ui-bootstrap-custom-tpls-1.2.5.js"></script>
 
 
 
@@ -46,6 +47,7 @@
 <!-- inject:js -->
 <script src="./app/scripts/config/states.js"></script>
 <script src="./app/scripts/controllers/mainController.js"></script>
+<script src="./app/scripts/controllers/dateController.js"></script>
 <script src="./app/scripts/directives/productsFormDirective.js"></script>
 <script src="./app/scripts/directives/choiceDataDirective.js"></script>
 <script src="./app/scripts/directives/layoutDirective.js"></script>
