--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-<h1>test</h1>hello
+<h1>Header</h1>
 
-
-<script src="js/script.min.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
