--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,9 @@
 
 <script src="scripts/config/states.js"></script>
 <script src="scripts/controllers/mainCtrl.js"></script>
+<!--<script src="scripts/config/run.js"></script>-->
+<script src="scripts/services/tree.js"></script>
+<script src="scripts/directives/treeNodeDirective.js"></script>
 
 </body>
 </html>
